--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,4 +35,5 @@ android {
 
 dependencies {
     implementation('com.google.zxing:core:3.4.1')
+    implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.7'
 }
